LU-19519 lod: allow migration of PFL with invalid OST

For uninitialized PFL components, the stripe offset
may be invalid (e.g., pointing to a deactivated OST).
This can happen during migration when old layouts have
deprecated stripe offsets stored in lmm_layout_gen.

Previously, lod_ost_alloc_specific() would fail with
-EINVAL when it could not find the specified OST in
the pool, blocking migration with "cannot get group
lock" errors.

This patch modifies lod_ost_alloc_specific() to detect
uninitialized components with invalid stripe offsets,
reset the offset to LOV_OFFSET_DEFAULT, and return
-EAGAIN to trigger fallback to QoS or round-robin
allocation.

The corresponding fallback logic is added to
lod_qos_prep_create() to handle -EAGAIN by attempting
QoS allocation first, then round-robin if needed.

A test case is added to verify that migration succeeds
for PFL files with uninitialized components on
deactivated OSTs.

Signed-off-by: Patrick Farrell <pfarrell@whamcloud.com>
Change-Id: Ie276a1094dfb2df18100ec1cffc72d791587c847
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/62040
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Reviewed-by: Stephane Thiell <sthiell@stanford.edu>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>